  * Update build-depends to use libtelepathy-qt5, libtelepathy-logger-qt-dev,
    qtbase5, extra-cmake-modules and many kf5 libraries.
  * Update Diane Trout's email address.
  * Update copyright file, a few modules are now LGPL, the po/* files
    are somewhere else and I added myself to the debian/ block
  * Update install paths for ktp-contactlist

 -- Diane Trout <diane@debian.org>  Sun, 12 Jul 2015 15:12:30 -0700

ktp-contact-list (0.9.0-1) unstable; urgency=medium

  * New upstream release.
  * Update libktpcommoninternalsprivate-dev build-dep to 0.9.0
  * Update Standards-Version to 3.9.6. No changes needed.
  * Update copyright file.
  * Update debian/watch file to use http://download.kde.org

 -- Diane Trout <diane@ghic.org>  Sat, 25 Apr 2015 19:47:52 -0700

ktp-contact-list (0.8.1-2) unstable; urgency=medium

  * Add kde-telepathy-kpeople as a dependency to ktp-contactlist
    this should force installing of the kpeople components to
    prevent the contact list from being empty.
    (Closes: #753305)

 -- Diane Trout <diane@ghic.org>  Tue, 21 Oct 2014 22:07:01 -0700

ktp-contact-list (0.8.1-1) unstable; urgency=medium

  * New upstream release.
  * Bump Standards-Version to 3.9.5. No changes needed.
  * Update ktp-common-internals and kde-telepathy-data to 0.8.1
  * Enable kpeople with build-depends >= 0.2.2
  * Update debian/copyright

 -- Diane Trout <diane@ghic.org>  Fri, 16 May 2014 21:01:52 -0700

ktp-contact-list (0.7.0-1) unstable; urgency=low

  * New upstream release.
  * Bump Build-Depends of libktpcommoninternalsprivate-dev to 0.7.0
  * Bump depends kde-telepathy-data to 0.7.0

 -- Diane Trout <diane@ghic.org>  Wed, 27 Nov 2013 18:11:34 -0800

ktp-contact-list (0.6.3-1) unstable; urgency=low

  [ Diane Trout ]
  * Update watch file as KDE-Telepathy is now in KDE stable release.
  * Imported Upstream version 0.6.2
  * Bump ktp-common-internals dependency to 0.6.2
  * Bump libtelepathy-qt4-dev dependency to 0.9.3