@@ -10,6 +10,9 @@ ktp-contact-list (15.04.3-1) UNRELEASED; urgency=medium
   * Update copyright file, a few modules are now LGPL, the po/* files
     are somewhere else and I added myself to the debian/ block
   * Update install paths for ktp-contactlist
+  * Use dhmk from pkg-kde-tools to build ktp.
+    - Change maintainer to debian-qt-kde
+    - Update debian/rules
 
  -- Diane Trout <diane@debian.org>  Sun, 12 Jul 2015 15:12:30 -0700
 
